<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/scanDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scanDuration"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/scanOptions"
        android:layout_alignStart="@+id/scanOptions"
        android:layout_marginTop="50dp" />

    <TextView
        android:text="@string/scanInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/scanDuration"
        android:layout_alignStart="@+id/scanDuration" />

    <TextView
        android:text="@string/scanDeletionTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/scanOptions" />

    <TextView
        android:text="@string/scanOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scanOptions"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:layout_marginTop="23dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp" />

    <Spinner
        android:layout_height="wrap_content"
        android:id="@+id/scanIntervalSpinner"
        android:layout_width="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/textView2" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scanDurationSpinner"
        android:layout_marginEnd="15dp"
        android:layout_alignTop="@+id/scanDuration"
        android:layout_alignStart="@+id/scanIntervalSpinner"
        android:layout_alignBottom="@+id/scanDuration" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:id="@+id/scanDeletionSpinner"
        android:layout_alignStart="@+id/scanIntervalSpinner"
        android:layout_alignEnd="@+id/scanIntervalSpinner"
        android:layout_alignBottom="@+id/textView4"/>

    <TextView
        android:text="@string/wifiOnlyExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchWIFI"
        android:layout_alignStart="@+id/switchWIFI"
        android:id="@+id/textView"
        android:layout_toStartOf="@+id/scanDeletionSpinner" />

    <Switch
        android:text="@string/wifiOnlyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/switchWIFI"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignEnd="@+id/scanDeletionSpinner" />


</RelativeLayout>