<!--
    created by Dawid Wowniuk
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.op_dfat.Fragment_analyze">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sampleFound"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/entriesFound"
            android:layout_marginBottom="19dp"
            android:layout_above="@+id/chronometer2"
            android:layout_alignEnd="@+id/progressBar"/>

        <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sampleCount"
            android:layout_marginStart="47dp"
            android:layout_alignBaseline="@+id/sampleFound"
            android:layout_alignBottom="@+id/sampleFound"
            android:layout_toEndOf="@+id/startStopScan"/>

        <TextView
            android:text="@string/scanDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scanDuration"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_above="@+id/textView3"
            android:layout_alignStart="@+id/sampleFound"
            android:layout_marginBottom="51dp"/>

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chronometer2"
            android:layout_alignBaseline="@+id/scanDuration"
            android:layout_alignBottom="@+id/scanDuration"
            android:layout_alignEnd="@+id/sampleCount"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:text="@string/ProgressbarInfo"
            android:textAlignment="center"
            android:layout_marginBottom="52dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:indeterminateDrawable="@drawable/analyzer"
            android:layout_marginBottom="46dp"
            android:layout_above="@+id/sampleFound"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startScan"
            android:id="@+id/startStopScan"
            android:onClick="startStopAnalyzing"
            android:layout_above="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"/>

    </RelativeLayout>
</FrameLayout>
