<?xml version="1.0" encoding="utf-8"?>
<!--
    created by Dawid Wowniuk
-->
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ViewSwitcher"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_apps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.op_dfat.Activity_apps">

        <TextView
            android:id="@+id/scanListInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appListInfoText"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <android.support.v7.widget.SearchView
            android:id="@+id/searchViewApps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scanListInfoTextView" />

        <ExpandableListView
            android:id="@+id/listViewApps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchViewApps" />

    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_apps_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        tools:context="com.op_dfat.Activity_apps">

        <TextView
            android:id="@+id/detailtedResultTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/massReportResourceDialogTitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ListView
            android:id="@+id/listViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailtedResultTitle"
            android:layout_marginBottom="200dp"
            android:layout_marginTop="50dp"
            android:isScrollContainer="false" />

        <Button
            android:id="@+id/sendReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/cancelReport"
            android:layout_alignBottom="@+id/cancelReport"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/buttonReport" />

        <Button
            android:id="@+id/cancelReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/buttonCancel" />

        <EditText
            android:id="@+id/reportText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cancelReport"
            android:layout_alignEnd="@+id/button4"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="26dp"
            android:ems="10"
            android:hint="Enter your explanation here"
            android:inputType="text|textPersonName" />

        <TextView
            android:id="@+id/reportExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/reportText"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="14dp"
            android:isScrollContainer="false"
            android:text="@string/massReportResourceDialogText"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    </RelativeLayout>

</ViewSwitcher>